data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_738.wast
;; 9. **Test for Indirect Branching in Loops using `br_table` and `br_if` Combining**    - **Description**: Use a combination of `br_table` and `br_if` instructions within a loop, where the `br_if` condition determines the table index for branching.    - **Constraint Checked**: Verifies indirect branching logic combined with condition checks.    - **Incorrect Condition Evaluation**: Ensures conditions influence the correct indices in the branch table.

(assert_invalid
  (module
    (func $branching_loop
      (loop (result i32)
        (i32.const 0)
        (i32.const 1)
        (br_table 0 1 0 (i32.const 1)) 
        (br_if 0 (i32.const 1))
      )
    )
  )
  "type mismatch"
)